tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/virtualservice/set_host_header_in_route_and_destination/a/to_tproxy/_test_context/VirtualService.3388834664.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-20468
spec:
  hosts:
  - tproxy
  http:
  - headers:
      request:
        set:
          :authority: route-authority
    route:
    - destination:
        host: tproxy
      headers:
        request:
          set:
            Host: dest-authority
